--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
 	margin:0px 0px 0px 0px;
 	padding:0;
 	background-image: url('https://wallpaperscraft.com/image/gray_emboss_circles_decorative_coating_72421_2560x1440.jpg');
+	
 }
 
 /*header css */
@@ -18,8 +19,9 @@ header {
 	float:left;
 	width:100%;
 	border-style: solid;
-    border-bottom-width: 2px;
+    border-width:0px 0px 2px 0px;
     margin: 0px 0px 0px 0px;
+    overflow:hidden;
 }    
 
 h2{
@@ -38,7 +40,9 @@ h2{
 
 nav{
 	float:left;
-	margin:20px 0px 0px 0px;
+	position:absolute;
+	top:25px;
+	right:252px;
 }
 a {
 	margin-left:5px;
@@ -52,7 +56,7 @@ a:hover {
 /* About me section */
 .aboutMe{
 	clear:both;
-	overflow:auto;
+
 	float:left;
 	width:60%;
 	background-color:#ffffff;
@@ -161,7 +165,8 @@ input[type=submit]:hover {
 	border-bottom-style:solid;
 	border-bottom-width:2px;
 	border-bottom-color:#cccccc;
-	padding:20px;
+	padding-bottom:20px;
+	padding-top:20px;
 	margin:10px 52px 0px 43px;
 	font-size:125%;
 }
@@ -173,11 +178,57 @@ input[type=submit]:hover {
 .connectLinks{
 	margin: 20px 0px 0px 35px;
 }
+/*Portfolio*/
+.portfolio{
+	clear:both;
+	float:left;
+	width:60%;
+	height:1000px;
+	background-color:#ffffff;
+	margin:50px 0px 106px 50px;
+}
+.portfolioHeader{
+	width:84%;
+}
+.portfolioBox{
+	float:left;
+	width: 40%;
+	height: 250px;
+	margin-left:37px;
+	margin-bottom:40px;
+	position:relative;
+}
+.portfolioLink{
+	content:"";
+}
+.portfolioPic{
+	width: 100%;
+	height: 250px;
+	border: 1px solid black;
+	border:0px;
+	margin:0px 2px 0px 0px;
+}
+.portfolioBoxHeader{
+	background-color: #4aaaa5;
+	color:white;
+	text-align:center;
+	padding-top:20px;
+	padding-bottom:20px;
+	width:100%;
+	height:20px;
+	position:absolute;
+	bottom: 0px;
+	left:5px;
+}
+.rps{
+	margin-left:5px;
+}
+
 
 /* footer */
 footer{
 	clear:both;
-	overflow:auto;
+	overflow:hidden;
 	background-color: #666666;
 	font-size:60%;
 	padding-top:30px;
