--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,19 +30,18 @@ h2{
 
 .name{
 	background-color: #4aaaa5;
-	color: white;
-	float:left;
-	padding:20px;
+    color: white;
+    float: left;
+    padding: 25px;
     padding-left: 40px;
     padding-right: 40px;
-    margin: 0px 770px 0px 50px;
+    margin: 0px 0px 0px 50px;
 }
-
 nav{
 	float:left;
 	position:absolute;
-	top:25px;
-	right:252px;
+	top: 27px;
+    right: 86px;
 }
 a {
 	margin-left:5px;
@@ -56,11 +55,10 @@ a:hover {
 /* About me section */
 .aboutMe{
 	clear:both;
-
 	float:left;
 	width:60%;
 	background-color:#ffffff;
-	margin:50px 0px 65px 50px;
+	margin:50px 0px 125px 50px;
 }
 
 h2, h3{
@@ -70,7 +68,7 @@ h2, h3{
 .aboutMeTitle{
 	margin: 0px 40px 35px 40px;
 	padding-top:30px;
-	padding-bottom:30px;
+	padding: 30px 16px 30px 0px;
 	border-style: solid;
 	border-width:0px;
     border-bottom-width: 3px;
@@ -89,7 +87,7 @@ p{
 	margin:0px 50px 40px 40px;
 	float:none;
 	font-size:125%;
-	line-height:150%;
+	line-height:125%;
 }
 
 /*contact box*/
@@ -154,7 +152,7 @@ input[type=submit]:hover {
 .connect{
 	margin:50px 0px 0px 50px;
 	width:20%;
-	height:200px;
+	height:155px;
 	float:left;
 	background-color:#ffffff;
 
@@ -167,16 +165,17 @@ input[type=submit]:hover {
 	border-bottom-color:#cccccc;
 	padding-bottom:20px;
 	padding-top:20px;
-	margin:10px 52px 0px 43px;
-	font-size:125%;
+	margin: 5px 19px 0px 20px;
+    font-size: 109%;
 }
 
 #git,#link,#stack{
-	width: 60px;
-    margin-left: 4px;
+	margin:0px 0px 0px 0px;
+	width: 40px;
+    margin-left: 2px;
 }
 .connectLinks{
-	margin: 20px 0px 0px 35px;
+	margin: 20px 0px 0px 20px;
 }
 /*Portfolio*/
 .portfolio{
